# ubu-core

./: .gitmodules  CHANGELOG.md  CODEGEN.md  CONTRACT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  codegen-task.yml  contract-change.yml  design-sync.yml
.github/workflows/: ci.yml
fixtures/: README.md
fixtures/placeholders/valid/core/external-reference/: basic.json
src/: authority.rs  compartment_label.rs  errors.rs  id_registry.rs  ids.rs  lib.rs  object_ref.rs  policy_summary.rs  provenance.rs  serde_helpers.rs  source_ref.rs  time.rs  validation.rs
src/core/: automation_worker.rs  compartment.rs  container.rs  external_event.rs  external_reference.rs  identity.rs  log_entry.rs  mod.rs  objective.rs  preference.rs  relationship.rs  snapshot.rs  task.rs  universe_state.rs  work_item.rs
src/github/: ci_event_source.rs  issue_source.rs  mod.rs  pr_source.rs  repository_source.rs
src/planning/: calendar.rs  diagnostics.rs  explanation.rs  mod.rs  plan.rs  plan_step.rs  planning_request.rs  planning_response.rs  repair_request.rs  repair_response.rs
src/projection/: approval.rs  legitimizer.rs  mod.rs  operation.rs  preview.rs  result.rs
src/store/: admitted_object.rs  candidate_object.rs  mod.rs  recalculation_trigger.rs
src/worker/: authority.rs  gpu_advisory.rs  mod.rs  submission.rs
tests/: authority_source.rs  id_validation.rs  schema_fixture_roundtrip.rs  serialization.rs  task_lifecycle.rs  timestamp_validation.rs
(+10 files in other folders)
